# RK-GenAI-Chatbot

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
examples/: curl.sh  discord_bot.py  javascript.js  python.py  slack_webhook.py
frontend/: index.html  package.json
frontend/src/: AIAssistant.jsx  main.jsx
frontend/src/shared/config/: env.js
frontend/src/shared/services/api/: assistantApi.js
rk-core/: cache.py  database.py  embeddings.py  fallback.py  guardrails.py  logging_config.py  main.py  requirements.txt
rk-core/knowledge_base/: certifications.md  contact.md  education.md  experience.md  leadership.md  profile.md  projects.md  skills.md
rk-core/knowledge_base/github/: InternOps.md  Quintern.md  Skillnova.md  TL_management-.md  _profile.md  _summary.md  ai-compliance-copilot.md  apogee.md  brainbox-ai.md  deloitte-iot-task.md  jpmorgan-software-engineering-virtual-internship.md  rajat-portfolio.md  rajat-wyrm.md  secure-auth-backend.md  taskflow.md
rk-core/llm/: __init__.py  providers.py  race.py
rk-core/retriever/: __init__.py  vectorstore.py
rk-core/scripts/: build_embeddings.py  ingest_github.py
sdk/: README.md  pyproject.toml
sdk/rkgenaichatbot/: __init__.py  client.py
widget/: rk-chatbot-widget.js
